--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/DBName
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=none
 
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+#Context Path Setup
+spring.application.name=pathshala
+server.port=8080
+
+# Set Your Context Path Here
+server.servlet.context-path=/
