--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,14 @@
             <version>2.0.1.Final</version>
             <scope>compile</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.4</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
