Filter and encryption utility

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ server.port=8080
 
 # Set Your Context Path Here
 server.servlet.context-path=/pathshala
+secretKey = 6327b79fee02d134ac10eb7e71f436d9
