--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/pathshala
+spring.datasource.url=jdbc:mysql://pathshala.ceicaxhwkbt9.us-east-2.rds.amazonaws.com:3306/pathshala
 spring.datasource.username=root
-spring.datasource.password=root@2208
+spring.datasource.password=root2208
 spring.jpa.hibernate.ddl-auto=none
 
 ## Hibernate Properties
