--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://pathshala.ceicaxhwkbt9.us-east-2.rds.amazonaw
 spring.datasource.username=root
 spring.datasource.password=root2208
 spring.jpa.hibernate.ddl-auto=none
-
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
