--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,5 @@ server.port=8080
 
 # Set Your Context Path Here
 server.servlet.context-path=/pathshala
+filePath = src/main/resources/uploadedFiles
 secretKey = 6327b79fee02d134ac10eb7e71f436d9
