--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=root2208
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.service.multipart.max-file-size = 5MB
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
@@ -13,5 +14,5 @@ server.port=8080
 
 # Set Your Context Path Here
 server.servlet.context-path=/pathshala
-filePath = src/main/resources/uploadedFiles
+filePath = src/main/resources/uploadedFiles/
 secretKey = 6327b79fee02d134ac10eb7e71f436d9
