--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,10 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.application.name=pathshala
 server.port=8080
 
+#Spring boot logging
+logging.level.org.springframework.web: INFO
+
+
 # Set Your Context Path Here
 server.servlet.context-path=/pathshala
 filePath = src/main/resources/uploadedFiles/
