--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,10 @@ logging.level.org.springframework.web: INFO
 server.servlet.context-path=/pathshala
 filePath = src/main/resources/uploadedFiles/
 secretKey = 6327b79fee02d134ac10eb7e71f436d9
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=pathshalahelper@gmail.com
+spring.mail.password=esnaipvqrrhezumi
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
